--- a/install
+++ b/install
@@ -2,6 +2,16 @@
 
 set -e
 
+# Close any open System Preferences panes, to prevent them from overriding
+# settings we’re about to change
+osascript -e 'tell application "System Preferences" to quit'
+
+# Ask for the administrator password upfront
+sudo -v
+
+# Keep-alive: update existing `sudo` time stamp until `.macos` has finished
+while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
+
 CONFIG="install.conf.yaml"
 DOTBOT_DIR="dotbot"
 
