--- a/install
+++ b/install
@@ -12,6 +12,8 @@ sudo -v
 # Keep-alive: update existing `sudo` time stamp until `.macos` has finished
 while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
 
+export PATH=/opt/homebrew/bin:$PATH
+
 CONFIG="install.conf.yaml"
 DOTBOT_DIR="dotbot"
 
